# AZMI

./: .gitignore  ADVANCED_ANTIDETECT.md  CHANGELOG.md  CHANGES_SUMMARY.md  DISTRIBUTION-SOLUTIONS.md  DOCS_INDEX.md  INSTALLATION.md  LICENSE  LICENSE_KEYS.md  MIGRATION_GUIDE.md  PROXY_CHEATSHEET.md  PROXY_GUIDE.md  PROXY_TROUBLESHOOTING.md  README.md  README_RU.md  SMARTSCREEN-README.md  SUMMARY.md  SXORG_CHANGES.md  SXORG_INTEGRATION_GUIDE.md  TESTING_GUIDE.md  UPDATE_NOTES.md  index.html  installer.nsi  main.js  my.sx.org.har  package-lock.json  package.json  pnpm-lock.yaml  preload.js  puppeteer-launcher.js  renderer.js  styles.css  test.js  todo.md  vite.config.ts  ИСПРАВЛЕНИЕ_PLAYWRIGHT.md  ПЕРВЫЙ_ЗАПУСК.md
.github/workflows/: windows-build-release.yml
launcher/: README.md  index.html  main.js  package.json
scripts/: advanced-antidetect-launcher.js  launch_playwright.cjs  launch_playwright.js  launch_puppeteer.cjs  post-build-fix-modules.ps1  prepare-bundle.cjs
scripts/proxy-auth-extension/: background.js  manifest.json
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lib.rs.bak
src/components/: AppStatusBar.tsx  CookieBotModal.tsx  LicenseModal.tsx  ProfileModal.tsx  ProxyModal.tsx  SXOrgCreateProxy.tsx  SXOrgImportProxy.tsx  SXOrgIntegration.tsx  SetupWizard.tsx  SystemCheck.tsx  SystemSetup.tsx  UpdateDialog.tsx
src/hooks/: use-toast.ts
src/lib/: cookie-bot.ts  dependency-manager.ts  geoip.ts  i18n.tsx  launchProfile.ts  (+4 more)
(+6 files in other folders)
