[package]
name = "app"
version = "0.1.0"
description = "AEZAKMI Antidetect Browser"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
shell-escape = "0.1.5"
base64 = "0.21"
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
